# Hardware-Inventory-Scanner

./: .gitignore  app.py
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
frontend/: README.md
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: HardwareScanner.tsx
